# battery_degradation_prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml
doc/: README.md  _user_story_1.md  _user_story_2.md  _user_story_3.md  _user_story_4.md  _user_story_5.md  user_stories.md
src/battery_degradation_prediction/: load_mat_file_to_ndarray.py
